Fix section spacing in api documentation

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -58,8 +58,9 @@ div.sphinxsidebar a.github-edit img {
 }
 
 /* Space out top-level documentation*/
-div.section > dl {
-    margin-top: 4rem;
+div.body > section > dl {
+    margin-top: 6rem;
+}
 
 /* Repo list */
 .recipemd-repos {
